traversal.snake.Snake.scala.error
Compilation error:
Snake:10: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()) {
    ^Snake:15: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()) {
    ^